<resources>
    <string name="app_name">Open Lab Schedule</string>
    <string name="day_label">Day</string>
    <string name="time_label">Time</string>
    <string name="staff_label">Staff</string>
    <string name="mon_label">Monday</string>
    <string name="mon_time_label">2:00 – 5:00pm</string>
    <string name="mon_staff_label">Fahd Ahmed</string>
    <string name="tue_am_label">Tuesday(AM)</string>
    <string name="tue_am_time_label">9:30 – 11:30am</string>
    <string name="tue_am_staff_label">Angela Venable</string>
    <string name="tue_pm_label">Tuesday(PM)</string>
    <string name="tue_pm_time_label">1:00 – 5:00pm</string>
    <string name="tue_pm_staff_label">Barry Sullens</string>
    <string name="wed_label">Wednesday</string>
    <string name="wed_time_label">1:00 – 5:00pm</string>
    <string name="wed_staff_label">Kristopher Roberts</string>
    <string name="thur_label">Thursday</string>
    <string name="thur_time_label">9:30 – 11:30am</string>
    <string name="thur_staff_label">Angela Venable</string>
    <string name="info_label">The Open Lab is now available! Click the link on the bottom to join in the Open Lab!</string>
    <string name="link_label">https://global.gotomeeting.com/join/458128813</string>
    <string name="title_label">What is the purpose of the app?</string>
    <string name="purpose_label">The purpose of the app is to help Ivy Tech students in giving them an app to notify them when Ivy Tech Fort Wayne\'s School of Information Technology lab is open. They can help or tutor students in their coursework if they need some extra help. If you are unable to attend in-person, we will provide you a link to join us online. Hope to see you there!</string>
    <string name="notif_switch">Notification</string>
    <string name="dark_mode">Dark Theme</string>
    <string name="light_mode">Light Theme</string>
    <string name="settings_textview">Settings</string>
    <string name="proj_about_menu">About</string>
    <string name="proj_settings_menu">Settings</string>
    <string name="notif_title">Turn On Notifications?</string>
    <string name="notif_summary">Turn on switch to receive notifications.</string>
    <string name="color_title">Change Theme</string>
    <string name="color_summary">Select your theme</string>
    <string name="open_button">Open Lab Link</string>
    <string name="def_theme">1</string>
    <!-- Changed theme -->
</resources>
